[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_import"
version = "0.1.0"
description = "Utility for downloading Braintrust experiments and datasets as CSVs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ben Davis", email = "bengineerdavis@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=1.3.0",
  "requests>=2.25.0",
  "python-dotenv>=0.19.0",
  "braintrust",
]

[project.optional-dependencies]
dev = ["pytest>=6.0.0", "ruff>=0.0.241", "flake8>=3.9.2", "mypy>=0.812"]

[project.scripts]
bt-import = "bt_import.main:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/bt_import"
"Bug Tracker" = "https://github.com/yourusername/bt_import/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
